--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+//    Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 }
