--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.KeepTheTime"
         tools:targetApi="31">
         <activity
-            android:name=".MyFriendsActivity"
+            android:name=".ui.settings.MyFriendsActivity"
             android:exported="false" />
         <activity
             android:name=".ui.signup.SignUpActivity"
